Overhaul the core library
Return from install once the library is usable and prepare VLC and yt-dlp in
the background, so a server never blocks on a download. Replace the
AssertionError hierarchy with unchecked exceptions, move the reusable audio,
FFmpeg, HTTP and throwable helpers here, and pin yt-dlp to release 2026.08.19
with hash-verified downloads and zip support for 32-bit ARM Linux. The frame
pipeline reuses images and native matrices instead of allocating per frame.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>